# wm_moveit_server

./: CMakeLists.txt  README.md  package.xml
include/: move_arm_server.h
launch/: move_arm_server.launch  moveit_server.launch
src/: move_arm_server.cpp
srv/: get_pose.srv  move.srv  move_joints.srv  pick.srv
